--fix: update overflow fix

--- a/src/pages/dashboard/styles.module.css
+++ b/src/pages/dashboard/styles.module.css
@@ -21,7 +21,7 @@
 
 .tabs-container {
 	grid-column: 1 / -1;
-	overflow: scroll;
+	overflow-x: scroll;
 }
 
 .tabs {
